; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_misc.c_linux_getpriority.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_misc.c_linux_getpriority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i64* }
%struct.linux_getpriority_args = type { i32, i32 }
%struct.getpriority_args = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @linux_getpriority(%struct.thread* %0, %struct.linux_getpriority_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.linux_getpriority_args*, align 8
  %5 = alloca %struct.getpriority_args, align 4
  %6 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.linux_getpriority_args* %1, %struct.linux_getpriority_args** %4, align 8
  %7 = load %struct.linux_getpriority_args*, %struct.linux_getpriority_args** %4, align 8
  %8 = getelementptr inbounds %struct.linux_getpriority_args, %struct.linux_getpriority_args* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = getelementptr inbounds %struct.getpriority_args, %struct.getpriority_args* %5, i32 0, i32 1
  store i32 %9, i32* %10, align 4
  %11 = load %struct.linux_getpriority_args*, %struct.linux_getpriority_args** %4, align 8
  %12 = getelementptr inbounds %struct.linux_getpriority_args, %struct.linux_getpriority_args* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = getelementptr inbounds %struct.getpriority_args, %struct.getpriority_args* %5, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = load %struct.thread*, %struct.thread** %3, align 8
  %16 = call i32 @sys_getpriority(%struct.thread* %15, %struct.getpriority_args* %5)
  store i32 %16, i32* %6, align 4
  %17 = load %struct.thread*, %struct.thread** %3, align 8
  %18 = getelementptr inbounds %struct.thread, %struct.thread* %17, i32 0, i32 0
  %19 = load i64*, i64** %18, align 8
  %20 = getelementptr inbounds i64, i64* %19, i64 0
  %21 = load i64, i64* %20, align 8
  %22 = sub nsw i64 20, %21
  %23 = load %struct.thread*, %struct.thread** %3, align 8
  %24 = getelementptr inbounds %struct.thread, %struct.thread* %23, i32 0, i32 0
  %25 = load i64*, i64** %24, align 8
  %26 = getelementptr inbounds i64, i64* %25, i64 0
  store i64 %22, i64* %26, align 8
  %27 = load i32, i32* %6, align 4
  ret i32 %27
}

declare dso_local i32 @sys_getpriority(%struct.thread*, %struct.getpriority_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
